no capital letters womp womp

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "AdobeDPSAPI-js",
+  "name": "adobedpsapi-js",
   "description": "Library for Adobe DPS 2015's API",
   "version": "0.0.1",
   "homepage": "https://github.com/SixDimensions/AdobeDPSAPI-js",
