--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "aem-mobile-api",
   "description": "Library to access AEM Mobile's API",
-  "version": "0.0.11",
+  "version": "0.0.12",
   "homepage": "https://github.com/SixDimensions/aem-mobile-api-js",
   "main": "aem-mobile-api.js",
   "author": {
@@ -30,11 +30,16 @@
   "dependencies": {
     "lodash": "^3.10.1",
     "node-uuid": "^1.4.3",
+    "q": "^1.4.1",
     "restler": "^3.3.0"
   },
-  "devDependencies": {
-  },
+  "devDependencies": {},
   "keywords": [
-    "aem", "aem mobile", "mobile", "adobe dps", "dps", "api"
+    "aem",
+    "aem mobile",
+    "mobile",
+    "adobe dps",
+    "dps",
+    "api"
   ]
 }
