--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
   },
   "scripts": {
     "test": "jasmine",
-    "prepublish": "./node_modules/.bin/jsdoc -c jsdoc.conf"
+    "postpublish": "./node_modules/.bin/grunt"
   },
   "dependencies": {
     "lodash": "^3.10.1",
@@ -39,8 +39,10 @@
     "docs"
   ],
   "devDependencies": {
-    "ink-docstrap": "^1.1.4",
-    "jsdoc": "^3.4.0"
+    "grunt": "^0.4.5",
+    "grunt-gh-pages": "^1.0.0",
+    "grunt-jsdoc": "^1.1.0",
+    "ink-docstrap": "^1.1.4"
   },
   "keywords": [
     "aem",
