deprecated putArticleImage() and addArticleToCollection() in favor of putEntityThumbnail() and addEntitiesToCollection()

--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
   },
   "scripts": {
     "test": "jasmine",
-    "postpublish": "./node_modules/.bin/grunt"
+    "prepublish": "./node_modules/.bin/grunt jsdoc",
+    "postpublish": "./node_modules/.bin/grunt gh-pages"
   },
   "dependencies": {
     "lodash": "^3.10.1",
