--- a/package.json
+++ b/package.json
@@ -43,7 +43,8 @@
     "grunt": "^0.4.5",
     "grunt-gh-pages": "^1.0.0",
     "grunt-jsdoc": "^1.1.0",
-    "ink-docstrap": "^1.1.4"
+    "ink-docstrap": "^1.1.4",
+    "jasmine": "^2.5.2"
   },
   "keywords": [
     "aem",
